--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,6 +15,9 @@
     }
 
     /* Special CSS */
+    .special .countdown-container .countdown-counter li{
+        padding: 1.5rem 1rem;
+    }
 
 }
 @media (max-width:991px) {
@@ -23,8 +26,18 @@
         transform: translate(-66%, -50%);
     }
     /* Special CSS */
+    .special .countdown-container{
+        padding-top: 1rem;
+        padding-bottom: 5rem;
+    }
 
     /* Testimonial CSS */
+    .testimonial .carousel-control-prev{
+        left: -1.75rem;
+    }
+    .testimonial .carousel-control-next{
+        right: -1.75rem;
+    }
     
 }
 @media (max-width:767px) {
@@ -59,8 +72,22 @@
     }
 
     /* Special CSS */
+    .special{
+        padding: 4rem 0;
+    }
+    .special .countdown-container .countdown-counter li{
+        padding: 1rem;
+        width: 20%;
+    }
 
     /* Testimonial CSS */
+    .testimonial .testimonial-wrapper{
+        padding: 1rem;
+    }
+    .testimonial .carousel-control-prev,
+    .testimonial .carousel-control-next{
+        display: none;
+    }
     
 }
 @media (max-width:330px) {
@@ -68,6 +95,9 @@
     .home .home-banner .home-banner-text h2{
         font-size: 1rem;        
     }
-    /* Special CSS */
-    
+
+    /* Product CSS */
+    .products .up_to_content h2{
+        font-size: 0.625rem;
+    }
 }
