--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -1,4 +1,4 @@
-/* Importando la fuente de Google Fonts */
+/* Importando la fuente de Google Fonts (import font from google fonts) */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
 
 html, body {
