--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,21 @@ p{
 .product-list .product-image:hover .product-image-secondary{
     opacity: 1;
 }
+.special-img img-fluid{
+    transition: all 500ms ease-in-out;
+  }
+  .special-img .image-dos{
+      opacity: 0;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+  }
+  .special-img:hover .image-dos{
+      opacity: 1;
+  }
+
 .product-list .product-image .sale{
     background: var(--bg-danger);
     border-radius: 0.313rem;
