--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -11,7 +11,7 @@ html, body {
     height: 100%;
     width: 100%;
     margin: auto;
-    background: url(../img/forrest.png) no-repeat 50% 50%;
+    background: url(../img/github-slide1.jpg) no-repeat 50% 50%;
     background-size: cover;
     display: table;
     top: 0;
@@ -32,14 +32,15 @@ html, body {
     font-size: 150%;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
-    color: #098fa8;
+    color: #f9f3f4;
     border: 2px solid #098fa8;
     padding: 10px 20px;
     border-radius: 5px;
+    text-shadow: 1px 1.5px #098fa8;
 }
 .btn:hover {
-    color: #156377;
-    border: 2px solid #156377;    
+    color: #4151FA;
+    border: 2px solid #4151FA;    
 }
 
 /* Responsive */
