--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,6 +487,10 @@ a.navbar-brand{
     outline: none;
     border: none;
 }
+.icono-enviar{
+    width: 2rem;
+    height: 2rem;
+}
 
 /* Footer CSS */
 .copyright{
