retoques del localStorage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ a.navbar-brand{
     position: relative;
 }
 .home .home-banner-1{
-    background-image: url('../img/github-slide1.jpg');
+    background-image: url('../img/github-slide1\ -\ copia.jpg');
 }
 .home .home-banner-2{
     background-image: url('../img/github-slide1.jpg');
