--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 :root{
     /* Creamos variables para reitilizarlas durante todo el proyecto (variable creation) */
     /* Declarando Variables de (Background Color)  */
-    --bg-danger:#f63440;
+    --bg-danger:#414EF4;
     --bg-white:#fff;
     --bg-light-white:#f5f5f5;
 
@@ -15,7 +15,7 @@
     --primary-font:"Poppins", sans-serif;
     --text-white:#fff;
     --text-black:#121212;
-    --text-danger:#f63440;
+    --text-danger:#D567D2;
     --text-gray:#aaa;
     --text-dark-gray:#777;
 }
@@ -46,7 +46,9 @@ p{
 }
 .btn-danger:hover{
     color: var(--text-danger);
-    background: transparent;
+    border-color: var(--text-danger);
+    /* background: transparent; */
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 /* Navigation CSS */
@@ -550,12 +552,12 @@ div .modal-footer{
 }
 .boton-eliminar {
     background-color: white;
-    color: red;
+    color: var(--bg-danger);
     border: none;
     font-size: 20px;
 }
 .boton-eliminar:hover {
-    color: #43ec4e;
+    color: var(--text-danger)
 }
 .imag{
     width: 40px;
