--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ a.navbar-brand{
     font-size: 25px;
     background-color: var(--bg-white);
     border-radius: 50%;
-    padding: 10px 20px;
+    padding-left: 8rem;
     transition: all .3s;
 }
 #boton-carrito:hover{
@@ -104,10 +104,10 @@ a.navbar-brand{
     position: relative;
 }
 .home .home-banner-1{
-    background-image: url('../img/github-slide1\ -\ copia.jpg');
+    background-image: url('../img/github-slide1\ -\ copia.webp');
 }
 .home .home-banner-2{
-    background-image: url('../img/github-slide1.jpg');
+    background-image: url('../img/github-slide1.webp');
 }
 .home .home-banner .home-banner-text{
     position:absolute;
