--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ a.navbar-brand{
     display: block;
     width: 50%;
     height: 100%;
-    background: -webkit-linear-gradient(to right, rgba(255,255,255,0)0%, rgba(255,255,255,0.3)100%);
+    background: -webkit-linear-gradient(to right, rgba(255,255,255,0)0%, rgba(255, 255, 255, 0.3)100%);
     background: linear-gradient(to right, rgba(255,255,255,0)0%, rgba(255,255,255,0.3)100%);
     transform: skewX(25deg);
 }
@@ -175,7 +175,7 @@ a.navbar-brand{
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4);
+    /* background: rgba(0, 0, 0, 0.4); */
     z-index: 1;
 }
 .offers .offer-box .offer-info{
